@@ -72,3 +72,13 @@ $_LANG['Enter document notification mail MDN (Message Delivery Notification) add
 
 $_LANG['Reply address:'] = 'Adres do odpowiedzi:';
 $_LANG['Enter document notification mail reply address'] = 'Podaj adres do odpowiedzi na powiadomienia o dokumencie';
+
+$_LANG['One-time authorization code'] = 'Jednorazowy kod autoryzacyjny';
+$_LANG['Enter code:'] = 'Wprowadź kod:';
+$_LANG['... which you received on your mobile phone'] = '... który otrzymałeś w Twoim telefonie komórkowym';
+
+$_LANG['Your previous authorization code is still valid. Please wait a minute until it expires.'] = 'Twój poprzedni kod autoryzacyjny jest wciąż ważny. Poczekaj minutę, aby wygasł.';
+$_LANG['Your authorization code has expired! Try again in a moment.'] = 'Wygasł Twój kod autoryzacyjny! Spróbuj ponownie za moment.';
+$_LANG['Authorization code you entered is invalid!'] = 'Podałeś niepoprawny kod autoryzacyjny!';
+$_LANG['Authorization code has been sent to you mobile phone.'] = 'Kod autoryzacyjny został wysłany na Twój telefon komórkowy.';
+$_LANG['Authorization code is valid! Document has been confirmed and your services will be activated in a few moments.'] = 'Kod autoryzacyjny poprawny! Dokument został zatwierdzony, a Twoje usługi zostaną aktywowane za parę chwil.';
